featuredcompanies: Fix image overflow

--- a/src/components/layout/style/03-objects/_image.scss
+++ b/src/components/layout/style/03-objects/_image.scss
@@ -6,12 +6,21 @@
 	width: 100%;
 }
 
-.customer-logo {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-.customer-logo>img {
+// .customer-logo {
+// 	display: flex;
+// 	align-items: center;
+// 	justify-content: center;
+// }
+// .customer-logo>img {
+// 	width: 12.5rem;
+// 	max-width: 100%;
+// 	margin: 0.5rem 0;
+// }
+
+.customer-logo {
 	width: 12.5rem;
-	margin: 0.55rem 0;
+	margin: 0.75rem;
+}
+.gatsby-image-wrapper {
+	max-width: 100%;
 }
